--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("../node_modules/@fortawesome/fontawesome-free/css/all.min.css");
+html {
+  font-size: 62.5%;
+}
+.postContianer {
+  width: 50%;
+  border: darkgoldenrod 0.1rem solid;
+  border-radius: 0.5rem;
+  margin: 2rem auto;
+  padding: 2rem;
+  &__title {
+    color: blue;
+  }
+  &__body {
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+  }
+}
+.editContainer {
+  width: 50%;
+  margin: auto;
+  padding: 1rem;
+  border: #007bff 0.1rem solid;
+  border-radius: 0.5rem;
+}
